# Poetry_installation_FastAPI

./: README.md  pyproject.toml
todo_db/todo_api/: pyproject.toml
todo_db/todo_api/todo_api/: main.py  settings.py
uitclass/: main.py  settings.py
uitclass/python/: class01.py
